tests/health/gold/sdk/examples__http__http.toit.gold
<pkg:pkg-http>/connection.toit:197:7: error: Missing implementations for interface methods
class DetachedSocket_ implements tcp.Socket:
      ^~~~~~~~~~~~~~~
<sdk>/net/tcp.toit:28:3: note: Missing implementation for 'in'
  in -> io.CloseableReader
  ^~
<sdk>/net/tcp.toit:29:3: note: Missing implementation for 'out'
  out -> io.CloseableWriter
  ^~~
<pkg:pkg-http>/server.toit:44:10: warning: Name 'interface' will be reserved in future releases
  listen interface/tcp.Interface port/int handler/Lambda -> none:
         ^~~~~~~~~
<pkg:pkg-http>/web_socket.toit:33:20: warning: Unresolved reference 'web-socket'
Obtained from the $Client.web_socket or the $Server.web_socket methods.
                   ^~~~~~~~~~~~~~~~~
<sdk>/tls/socket.toit:119:13: warning: Deprecated 'Socket.close-write'
    socket_.close-write
            ^~~~~~~~~~~
<pkg:pkg-http>/connection.toit:230:50: warning: Deprecated 'Socket.write'
  write data from=0 to=data.size: return socket_.write data from to
                                                 ^~~~~
<pkg:pkg-http>/connection.toit:231:31: warning: Deprecated 'Socket.close-write'
  close_write: return socket_.close_write
                              ^~~~~~~~~~~
<pkg:pkg-http>/connection.toit:195:27: warning: Deprecated 'Socket.close-write'
      connection_.socket_.close_write
                          ^~~~~~~~~~~
<pkg:pkg-http>/web_socket.toit:49:20: warning: Deprecated 'Socket.read'
    return socket_.read
                   ^~~~
<pkg:pkg-http>/web_socket.toit:113:23: warning: Deprecated 'Socket.read'
      next := socket_.read
                      ^~~~
<pkg:pkg-http>/web_socket.toit:182:23: warning: Deprecated 'Socket.write'
      from += socket_.write data from to
                      ^~~~~
<pkg:pkg-http>/headers.toit:109:13: warning: Deprecated 'string.write-to-byte-array'
        str.write_to_byte_array bytes 0 it 0
            ^~~~~~~~~~~~~~~~~~~
